# superalgorithm

./: .gitignore  README.md  bump_version.py  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  python-publish.yml
src/runmachine/backtesting/: analytics.py  upload.py
src/runmachine/data/: data_provider.py  data_source.py  data_store.py  ohlcv_aggregator.py
src/runmachine/data/providers/ccxt/: __init__.py  ccxt_data_source.py  ccxt_helper.py
src/runmachine/data/providers/csv/: __init__.py  csv_data_source.py  csv_helper.py
src/runmachine/exchange/: __init__.py  base_exchange.py  ccxt_exchange.py  paper_exchange.py  status_tracker.py  woo_exchange.py
src/runmachine/strategy/: base_strategy.py
src/runmachine/types/: data_types.py
src/runmachine/utils/: api_client.py  bar_utils.py  logging.py
src/superalgorithm/backtesting/: __init__.py  analytics.py  upload.py
src/superalgorithm/data/: data_provider.py  data_source.py  data_store.py  ohlcv_aggregator.py
src/superalgorithm/data/providers/ccxt/: ccxt_data_source.py  ccxt_helper.py
src/superalgorithm/data/providers/csv/: csv_data_source.py  csv_helper.py
src/superalgorithm/exchange/: base_exchange.py  ccxt_exchange.py  paper_exchange.py  status_tracker.py  woo_exchange.py
src/superalgorithm/exchange/managers/: order_manager.py  position_manager.py  trade_manager.py
src/superalgorithm/strategy/: __init__.py  base_strategy.py
src/superalgorithm/types/: data_types.py
src/superalgorithm/utils/: api_client.py  async_task_manager.py  bar_utils.py  config.py  event_emitter.py  helpers.py  logging.py  unique_int_generator.py
tests/: __init__.py  conftest.py
tests/backtesting/: analytics_test.py  upload_test.py
tests/data/: ccxt_data_provider_test.py  csv_data_provider_test.py  data_provider_test.py  ohlcv_aggregator_test.py
tests/exchange/: paper_exchange_stress_test.py  paper_exchange_test.py  position_long_test.py  position_short_test.py  status_tracker_test.py  woo_exchange_test.py
tests/exchange/managers/: trade_manager_test.py
tests/strategy/: strategy_test.py
tests/utils/: logging_test.py
