[build-system]
requires = [
    "setuptools>=61.0.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "superalgorithm"
version = "0.0.8"
description = "Python framework for algorithmic trading"
readme = "README.md"
authors = [
    { name = "Super Algorithm", email = "hello@superalgorithm.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = [
    "project-superalgorithm",
    "superalgorithm",
]
dependencies = [
    "pyyaml>=6.0.2",
    "ccxt>=4.4.17",
    "numpy>=2.0.1",
    "requests>=2.32.3",
]
requires-python = ">=3.8"

[project.license]
file = "LICENSE"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "tomli",
    "tomli-w",
]

[project.urls]
Homepage = "https://github.com/superalgorithm/superalgorithm"

[tool.pytest.ini_options]
asyncio_mode = "auto"
